syntax="proto3";

package myorg.users.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/johanbrandhorst/bazel-mono/proto/myorg/users/v1;users";

service UserService {
    rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc ListUsers(ListUsersRequest) returns (stream ListUsersResponse) {}
}

enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_GUEST = 1;
    ROLE_MEMBER = 2;
    ROLE_ADMIN = 3;
}

message User {
    string id = 1;
    Role role = 2;
    google.protobuf.Timestamp create_time = 3;
}

message UserRole {
    Role role = 1;
}

message AddUserRequest {
    Role role = 1;
}

message AddUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    User user = 1;
}

message ListUsersRequest {
    // Only list users created after this timestamp
    google.protobuf.Timestamp created_since = 1;
    // Only list users older than this Duration
    google.protobuf.Duration older_than = 2;
}

message ListUsersResponse {
    User user = 1;
}
